Add GitHub Actions pull_request & environment

--- a/.github/workflows/lts-alpine.yml
+++ b/.github/workflows/lts-alpine.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches: 
       - 'lts-alpine'
+  pull_request:
+    branches: 
+      - 'lts-alpine'
 
 jobs:
   docker:
+    environment: dockerhub_staging
     runs-on: ubuntu-latest
     steps:
       - 
