--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,10 +24,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Set Docker Image Tag
+        run: |
+          GITHUB_BRANCH_NAME=$(echo ${GITHUB_REF##*/})
+          [[ ${GITHUB_BRANCH_NAME == "master" ]] && GITHUB_BRANCH_NAME=latest
+          echo "IMAGE_TAG=$(echo ${GITHUB_BRANCH_NAME})" >> $GITHUB_ENV
       -
-        name: Build and Push to DockerHub
+        name: Build and Push Image to DockerHub
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: joglomedia/jenkins-docker:latest
+          tags: "joglomedia/jenkins-docker:${{ env.IMAGE_TAG }}"
