--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,7 +27,7 @@ jobs:
       - 
         name: Set Docker Image Tag
         run: |
-          GITHUB_BRANCH_NAME=$(echo ${GITHUB_REF##*/})
+          GITHUB_BRANCH_NAME=$(echo "${GITHUB_REF##*/}")
           [[ ${GITHUB_BRANCH_NAME == "master" ]] && GITHUB_BRANCH_NAME=latest
           echo "IMAGE_TAG=$(echo ${GITHUB_BRANCH_NAME})" >> $GITHUB_ENV
       -
